# preintegration

./: CMakeLists.txt  README.md  main.cpp  test.cpp
include/: ImuFactor.h  ImuStateParameterization.h  ManifoldPreIntegration.h  PreintegrationBase.h  PreintegrationParams.h  common.h  math_utils.h
src/: ImuFactor.cpp  ImuStateParameterization.cpp  ManifoldPreIntegration.cpp  math_utils.cpp
